[package]

name = "piston-random-motion"
version = "0.0.0"
readme = "README.md"
authors = ["Your Name <your@email.com>"]
tags = []

[[bin]]

name = "random-motion"
path = "src/main.rs"

[dependencies.piston2d-graphics]

git = "https://github.com/pistondevelopers/graphics"

[dependencies.piston]

git = "https://github.com/pistondevelopers/piston/"

[dependencies.pistoncore-sdl2_window]

git = "https://github.com/pistondevelopers/sdl2_window"

[dependencies.piston2d-opengl_graphics]

git = "https://github.com/pistondevelopers/opengl_graphics"
